added basic metadata

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 https://github.com/helfi92/studorlio
 -->
  <html>
-
+	
 	<head>
 		<title>Portfolio</title>
 		<!-- css files -->
@@ -35,8 +35,13 @@ https://github.com/helfi92/studorlio
 		<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 		<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-		<meta name="author" content="Hassan Ali">
+		<meta charset="UTF-8">
+		<meta name="author" content="OnikenX">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>OnikenX - Info</title>
+		<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
+
+
 	</head>
 
 	<body>
