--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@ https://github.com/helfi92/studorlio
  <html>
 	
 	<head>
-		<title>Portfolio</title>
+		<title>OnikenX</title>
+		<meta charset="UTF-8">
+		<meta name="author" content="OnikenX">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
 		<!-- css files -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css"
@@ -35,11 +39,7 @@ https://github.com/helfi92/studorlio
 		<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
 		<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-		<meta charset="UTF-8">
-		<meta name="author" content="OnikenX">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>OnikenX - Info</title>
-		<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
+		
 
 
 	</head>
