--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ https://github.com/helfi92/studorlio
 		<meta name="author" content="OnikenX">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
+
+		<link href="https://a-v2.sndcdn.com/assets/images/sc-icons/favicon-2cadd14bdb.ico" rel="icon">
+
 		<!-- css files -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css"
