added basic metadata

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ https://github.com/helfi92/studorlio
 		<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
 
 		<link href="https://a-v2.sndcdn.com/assets/images/sc-icons/favicon-2cadd14bdb.ico" rel="icon">
+		<meta name="msapplication-TileImage" content="https://a-v2.sndcdn.com/assets/images/sc-icons/win8-2dc974a18a.png">
 
 		<!-- css files -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
