--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ https://github.com/helfi92/studorlio
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
 
-		<link href="https://a-v2.sndcdn.com/assets/images/sc-icons/favicon-2cadd14bdb.ico" rel="icon">
-		<meta name="msapplication-TileImage" content="assets/img/profile.png">
+		<link href="./assets/img/profile.png" rel="icon">
+		<meta name="msapplication-TileImage" content="./assets/img/profile.png">
 
 		<!-- css files -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
