added basic metadata

--- a/index.html
+++ b/index.html
@@ -24,95 +24,100 @@ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 	Original website/source
 https://github.com/helfi92/studorlio
 -->
- <html>
-	
-	<head>
-		<title>OnikenX</title>
-		<meta charset="UTF-8">
-		<meta name="author" content="OnikenX">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
+<html>
 
-		<link href="./assets/img/profile.png" rel="icon">
-		<meta name="msapplication-TileImage" content="./assets/img/profile.png">
+<head>
+	<title>OnikenX</title>
+	<meta charset="UTF-8">
+	<meta name="author" content="OnikenX">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
 
-		<!-- css files -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css"
-			href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
-		<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+	<link href="./assets/img/profile.png" rel="icon">
+	<meta name="msapplication-TileImage" content="./assets/img/profile.png">
 
-		<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
-		
+	<!-- css files -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+
+	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
 
 
-	</head>
 
-	<body>
-		<!-- Navbar -->
-		<nav class="nav container void-background">
-			<!-- This "nav-menu" is hidden on mobile -->
-			<!-- Add the modifier "is-active" to display it on mobile -->
-			<div class="nav-left">
+</head>
 
-				<a href="http://github.com/OnikenX" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-github"></i>
-					</span>
-				</a>
-				<a href="https://twitter.com/_OnikenX_" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-twitter"></i>
-					</span>
-				</a>
-				<a href="https://anilist.co/user/OnikenX" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-anilist"><img class="" src="assets/img/anilist.svg"></i>
-					</span>
-				</a>
-			</div>
+<body>
+	<!-- Navbar -->
+	<nav class="nav container void-background horizontal-align">
+		<!-- This "nav-menu" is hidden on mobile -->
+		<!-- Add the modifier "is-active" to display it on mobile -->
+		<div class="nav-left">
 
-			<div class="nav-right nav-menu">
-				<a class="nav-item" href="#about">About</a>
-				<!-- unused
+			<a href="http://github.com/OnikenX" class="nav-item">
+				<span class="icon">
+					<i class="fa">
+						<img src="./assets/img/github.png" alt="">
+					</i>
+				</span>
+			</a>
+			<a href="https://twitter.com/_OnikenX_" class="nav-item">
+				<span class="icon">
+					<i class="fa">
+						<img class="" src="./assets/img/twitter.png">
+					</i>
+				</span>
+			</a>
+			<a href="https://anilist.co/user/OnikenX" class="nav-item">
+				<span class="icon">
+					<i class="fa">
+						<img class="" src="./assets/img/anilist.svg">
+					</i>
+				</span>
+			</a>
+		</div>
+
+		<div class="nav-right nav-menu">
+			<a class="nav-item" href="#about">About</a>
+			<!-- unused
 			<a class="nav-item" href="#projects">Projects</a>
 			<a class="nav-item" href="#social">Social</a>
 			-->
-			</div>
+		</div>
 
-			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
-			<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
-			<span class="nav-toggle">
-				<span></span>
-				<span></span>
-				<span></span>
-			</span>
-		</nav>
+		<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
+		<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
+		<span class="nav-toggle">
+			<span></span>
+			<span></span>
+			<span></span>
+		</span>
+	</nav>
 
-		<!-- About Me -->
-		<section id="about" class="section section-1">
-			<div class="container">
-				<!--</br>-->
+	<!-- About Me -->
+	<section id="about" class="section section-1">
+		<div class="container">
+			<!--</br>-->
 
 
-				<h1 class="title is-3">
-					<center><b>OnikenX</b></center>
-				</h1>
-			</div>
-			<div class="container has-text-centered">
-				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profile.png">
-			</div>
-			<div class="container"></br>
-				<p class="intro">
-					<center>
-						I'm a simple c/c++ programer with little knowhow to do things.
-					</center>
-				</p>
-			</div>
-		</section>
+			<h1 class="title is-3">
+				<center><b>OnikenX</b></center>
+			</h1>
+		</div>
+		<div class="container has-text-centered">
+			<!-- Source: https://flic.kr/p/pAZBNK -->
+			<img class="avatar" src="./assets/img/profile.png">
+		</div>
+		<div class="container"></br>
+			<p class="intro">
+				<center>
+					I'm a simple c/c++ programer with little knowhow to do things.
+				</center>
+			</p>
+		</div>
+	</section>
 
-		<!-- Projects
+	<!-- Projects
 	<section id="projects" class="section section-2">
 		<div class="container">
 			<div class="has-text-centered">
@@ -160,13 +165,13 @@ https://github.com/helfi92/studorlio
 		</div>
 	</section>
 	-->
-		<!-- Footer
+	<!-- Footer
 	<section class="section-4 has-text-centered container">
 		OnikenX
 	</section>
  -->
-		<!-- Scripts  -->
-		<script src="controller.js"></script>
-	</body>
+	<!-- Scripts  -->
+	<script src="controller.js"></script>
+</body>
 
-	</html>
+</html>
