--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ https://github.com/helfi92/studorlio
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
 
-	<link href="./assets/img/profile.png" rel="icon">
-	<meta name="msapplication-TileImage" content="./assets/img/profile.png">
+	<link href="./assets/img/LOGOoNIKENx.png" rel="icon">
+	<meta name="msapplication-TileImage" content="./assets/img/LOGOoNIKENx.png">
 
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -101,14 +101,14 @@ https://github.com/helfi92/studorlio
 
 
 			<h1 class="title is-3">
-				<center><b>OnikenX</b></center>
+				<center><b class="a">OnikenX</b></center>
 			</h1>
 		</div>
 		<div class="container has-text-centered">
 			<!-- Source: https://flic.kr/p/pAZBNK -->
-			<img class="avatar" src="./assets/img/profile.png">
+			<img style="height: 20em" src="./assets/img/LOGOoNIKENx.png"><!--class="avatar"-->
 		</div>
-		<div class="container"></br>
+		<div class="a container"></br>
 			<p class="intro">
 				<center>
 					I'm a simple c/c++ programer with little knowhow to do things.
