--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ https://github.com/helfi92/studorlio
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
 
-	<link href="./assets/img/LOGOoNIKENx.png" rel="icon">
-	<meta name="msapplication-TileImage" content="./assets/img/LOGOoNIKENx.png">
+	<link href="./assets/img/OnikenX_Logo_v2.svg" rel="icon">
+	<meta name="msapplication-TileImage" content="./assets/img/OnikenX_Logo_v2.svg>
 
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -106,17 +106,18 @@ https://github.com/helfi92/studorlio
 		</div>
 		<div class="container has-text-centered">
 			<!-- Source: https://flic.kr/p/pAZBNK -->
-			<img style="height: 20em" src="./assets/img/LOGOoNIKENx.png"><!--class="avatar"-->
+			<img style="height: 20em" src="./assets/img/OnikenX_Logo_v2.svg"><!--class="avatar"-->
 		</div>
 		<div class="a container"></br>
 			<p class="intro">
 				<center>
-					I'm a simple c/c++ programer with little knowhow to do things.
+					I'm a simple programmer that loves C++.</br>
+					Learning Java, Python and ReactJS.
 				</center>
 			</p>
 		</div>
-	</section>
-
+		
+	
 	<!-- Projects
 	<section id="projects" class="section section-2">
 		<div class="container">
