added soundcloud link

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@ https://github.com/helfi92/studorlio
 					</i>
 				</span>
 			</a>
+			<a href="https://soundcloud.com/onikenx" class="nav-item">
+				<span class="icon">
+					<i class="fa">
+						<img class="" src="./assets/img/soundcloud.png">
+					</i>
+				</span>
+			</a>
 		</div>
 
 		<div class="nav-right nav-menu">
