Updated twitter link and commented 'About' link

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ https://github.com/helfi92/studorlio
 					</i>
 				</span>
 			</a>
-			<a href="https://twitter.com/_OnikenX_" class="nav-item">
+			<a href="https://twitter.com/OnikenX_" class="nav-item">
 				<span class="icon">
 					<i class="fa">
 						<img class="" src="./assets/img/twitter.png">
@@ -85,8 +85,8 @@ https://github.com/helfi92/studorlio
 		</div>
 
 		<div class="nav-right nav-menu">
-			<a class="nav-item" href="#about">About</a>
 			<!-- unused
+			<a class="nav-item" href="#about">About</a>
 			<a class="nav-item" href="#projects">Projects</a>
 			<a class="nav-item" href="#social">Social</a>
 			-->
