removed the learning and added rust

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!--
 The MIT License (MIT)
 
-Copyright (c) 2019 OnikenX
+Copyright (c) 2021 OnikenX
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
@@ -118,8 +118,7 @@ https://github.com/helfi92/studorlio
 		<div class="a container"></br>
 			<p class="intro">
 				<center>
-					I'm a simple programmer that loves C++.</br>
-					Learning Java, Python and ReactJS.
+					I'm a simple programmer that loves C++ and Rust.
 				</center>
 			</p>
 		</div>
