updated the discription, some metadata and links

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@ https://github.com/helfi92/studorlio
 	<meta charset="UTF-8">
 	<meta name="author" content="OnikenX">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="I'm a simple c/c++ programer with little knowhow to do things.">
+	<meta name="description" content="I'm a simple c/c++ and rust programer with little knowhow to do things.">
+	<meta name="image" content="https://avatars.githubusercontent.com/u/25059102?v=4">
 
-	<link href="./assets/img/OnikenX_Logo_v2.svg" rel="icon">
-	<meta name="msapplication-TileImage" content="./assets/img/OnikenX_Logo_v2.svg>
+	<link href="https://avatars.githubusercontent.com/u/25059102?v=4" rel="icon">
+	<meta name="msapplication-TileImage" content="https://avatars.githubusercontent.com/u/25059102?v=4">
 
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
@@ -119,6 +120,7 @@ https://github.com/helfi92/studorlio
 			<p class="intro">
 				<center>
 					I'm a simple programmer that loves C++ and Rust.
+					I have worked with Tokio, some game consoles and learning graphics APIs.
 				</center>
 			</p>
 		</div>
