updated the discription, some metadata and links

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ https://github.com/helfi92/studorlio
 		<div class="a container"></br>
 			<p class="intro">
 				<center>
-					I'm a simple programmer that loves C++ and Rust.
+					I'm a simple programmer that loves C++ and Rust.<br>
 					I have worked with Tokio, some game consoles and learning graphics APIs.
 				</center>
 			</p>
