--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ https://github.com/helfi92/studorlio
 	<meta name="author" content="OnikenX">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="I'm a simple c/c++ and rust programer with little knowhow to do things.">
-	<meta name="image" content="https://avatars.githubusercontent.com/u/25059102?v=4">
+	<meta name="image" content="./assets/img/OnikenX_Logo_v2.svg">
 
-	<link href="https://avatars.githubusercontent.com/u/25059102?v=4" rel="icon">
-	<meta name="msapplication-TileImage" content="https://avatars.githubusercontent.com/u/25059102?v=4">
+	<link href="./assets/img/OnikenX_Logo_v2.svg" rel="icon">
+	<meta name="msapplication-TileImage" content="./assets/img/OnikenX_Logo_v2.svg">
 
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
