--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ https://github.com/helfi92/studorlio
 
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
@@ -126,45 +127,34 @@ https://github.com/helfi92/studorlio
 		</div>
 		
 	
-	<!-- Projects
+	<!-- Projects-->
 	<section id="projects" class="section section-2">
-		<div class="container">
+		<div class="container">	
 			<div class="has-text-centered">
-				<h3 class="title is-3">Projects</h3>
+				<h3 class="title is-3 text-center">Projects</h3>
 			</div>
-
+			<div>
+				
+			</div>
 			<div class="columns is-multiline is-desktop">
-				//projecto 1
 				<div class="column">
 					<div class="box project-text">
 						<article>
 							<div>
-								<figure class="image project-figure">
-									<img src="assets/img/project-1.jpg" alt="Image">
-								</figure>
-							</div>
-							<div>
-								<p>
-									They don’t want us to eat. I told you all this before, when you have a swimming
-									pool, do not use chlorine, use salt water, the healing, salt water is the healing.
+								<p>	
+									rem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageM
 								</p>
 							</div>
 						</article>
 					</div>
 				</div>
-				//projecto 2
 				<div class="column">
 					<div class="box project-text">
 						<article>
-							<div>
-								<figure class="image project-figure">
-									<img src="assets/img/project-2.jpg" alt="Image">
-								</figure>
-							</div>
+
 							<div>
 								<p>
-									Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is
-									what you make it, so let’s make it.
+									rem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageM
 								</p>
 							</div>
 						</article>
@@ -173,7 +163,7 @@ https://github.com/helfi92/studorlio
 			</div>
 		</div>
 	</section>
-	-->
+	
 	<!-- Footer
 	<section class="section-4 has-text-centered container">
 		OnikenX
