updated images paths

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@ https://github.com/helfi92/studorlio
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="I'm a simple c/c++ and rust programer with little knowhow to do things.">
 	<meta name="image" content="./assets/img/OnikenX_Logo_v3.svg">
+	<meta property="og:image" content="./assets/img/OnikenX_Logo_v3.png" />
 	<link href="./assets/img/OnikenX_Logo_v3.svg" rel="icon">
-	<meta name="msapplication-TileImage" content="./assets/img/OnikenX_Logo_v3.svg">
+	<meta name="msapplication-TileImage" content="./assets/img/OnikenX_Logo_v3.png">
 
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
